first version of saving orders

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
   "description": "",
   "main": "",
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/linuskallander/Reorder",
   "private": true,
   "ignore": [
     "**/.*",
@@ -17,28 +17,25 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.2.0",
-    "app-layout": "PolymerElements/app-layout#^2.0.4",
-    "app-route": "PolymerElements/app-route#^2.0.3",
-    "iron-selector": "PolymerElements/iron-selector#^2.0.0",
-    "polymerfire": "firebase/polymerfire#^2.2.1",
-    "iron-icons": "PolymerElements/iron-icons#^2.0.1",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.1",
-    "paper-input": "PolymerElements/paper-input#^2.0.2",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^2.0.0",
-    "paper-radio-group": "PolymerElements/paper-radio-group#^2.0.0",
-    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
-    "paper-item": "PolymerElements/paper-item#^2.0.0",
-    "iron-pages": "PolymerElements/iron-pages#^2.0.0",
-    "paper-button": "PolymerElements/paper-button#^2.0.0",
-    "app-datepicker": "motss/app-datepicker#^2.11.2",
-    "vaadin-grid": "vaadin/vaadin-grid#^3.0.2",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^2.0.0",
-    "iron-collapse": "PolymerElements/iron-collapse#^2.0.0",
-    "paper-card": "PolymerElements/paper-card#^2.0.0",
-    "neon-animation": "PolymerElements/neon-animation#^2.0.1",
-    "app-localize-behavior": "PolymerElements/app-localize-behavior#^2.0.0",
-    "app-localize-chrome-i18n-mixin": "Collaborne/app-localize-chrome-i18n-mixin#^2.2.1"
+    "accessibility-developer-tools": "^2.10.0",
+    "async": "^1.5.0",
+    "chai": "^3.2.0",
+    "intl": "^1.2.5",
+    "lodash": "^3.7.0",
+    "mocha": "^3.1.2",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.1",
+    "paper-datatable-api": "RoXuS/paper-datatable-api#^2.0.8",
+    "paper-input-elements": "PolymerElements/paper-input-elements",
+    "paper-material": "PolymerElements/paper-material#^2.0.0",
+    "paper-ui-elements": "PolymerElements/paper-ui-elements",
+    "paper-tooltip": "PolymerElements/paper-tooltip#^2.0.1",
+    "sinon-chai": "^2.7.0",
+    "promise-polyfill": "polymerlabs/promise-polyfill#^1.0.0",
+    "sinonjs": "^1.14.1",
+    "test-fixture": "polymerelements/test-fixture#^3.0.0-rc.1",
+    "stacky": "^1.3.0",
+    "web-component-tester": "Polymer/web-component-tester#^6.0.0",
+    "whenever.js": "~0.0.1"
   },
   "resolutions": {
     "paper-checkbox": "^2.0.1",
