--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "test-fixture": "polymerelements/test-fixture#^3.0.0-rc.1",
     "stacky": "^1.3.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
-    "whenever.js": "~0.0.1"
+    "whenever.js": "~0.0.1",
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
   },
   "resolutions": {
     "paper-checkbox": "^2.0.1",
