--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "stacky": "^1.3.0",
     "web-component-tester": "Polymer/web-component-tester#^6.0.0",
     "whenever.js": "~0.0.1",
-    "paper-toast": "PolymerElements/paper-toast#^2.0.0"
+    "paper-toast": "PolymerElements/paper-toast#^2.0.0",
+    "vaadin-form-layout": "vaadin/vaadin-form-layout#^1.0.4"
   },
   "resolutions": {
     "paper-checkbox": "^2.0.1",
